statum-macros/tests/ui/invalid_transition_conditional.stderr
error: Invalid transition return type for `decide`: expected return type like `Machine<NextState>` (optionally wrapped in `Option`/`Result`).

       Expected:
         fn decide(self) -> ProcessMachine<NextState>

       Actual:
         Decision
  --> tests/ui/invalid_transition_conditional.rs:28:5
   |
28 |     fn decide(self, event: u8) -> Decision {
   |     ^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_conditional.rs:35:2
   |
35 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_conditional.rs`
